--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
 </head>
 
 <body>
-  <p>Welcome to the chat app</p>
+  <p>Welcome to the Appeal Window</p>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io();
 
     socket.on('connect', () => {
-      console.log('Connected to server');
+      console.log('Connected to Server');
     });
 
     socket.on('disconnect', () => {
-      console.log('Disconnected from server');
+      console.log('Disconnected from Server');
     });
   </script>
 </body>
