display css changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,21 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/appeal.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  
 </head>
 
 <body>
-  <p>Welcome to the Appeal Window</p>
-  <div>
-  	<ol id="messageList"></ol>
+  <header>Welcome to the Appeal Window</header>
+  <div id="messageDiv">
+  	<ul id="messageList"></ul>
   </div>
   
 
-  <form id="messageForm">
-  	<input name="message" type="text" placeholder="Type your message here..."/>
-  	<button>Send</button>
+  <form id="messageForm" >
+  	<input class="form-control" name="message" type="text" placeholder="Type your message here..."/>
+  	<button class="btn btn-success" >Send</button>
   </form>
 
 
